--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/A PLAGUE TALE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/A PLAGUE TALE.html
@@ -65,21 +65,21 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/XBOX/A PLAGUE TALE.jpeg" alt="sin imagen"><H2 class=" letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">A PLAGUE TALE</H2>
+            <img class="img" src="../img/XBOX/A PLAGUE TALE.jpeg" alt="sin imagen"><H2 class="centrar letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">A PLAGUE TALE</H2>
            </div>
            <div class="col-md-8 col-sm-12" >
           <table class="table-responsive" >
             <tr>
               <th>
-                <h2 class="centrar letraVJ">Descripcion</h2>
+                <h4 class="centrar letraVJ" >Descripción</h4>
               </th>
             </tr>
             <br>
             <tr>
               <th>
-                <p class="centrar letraVJ">En A Plague Tale: Innocence, el jugador toma el control de Amicia de Rune desde una perspectiva en tercera persona, con una jugabilidad centrada en el sigilo y la resolución de puzles.
+                <h5 class="centrar , letraVJ">En A Plague Tale: Innocence, el jugador toma el control de Amicia de Rune desde una perspectiva en tercera persona, con una jugabilidad centrada en el sigilo y la resolución de puzles.
                  Durante gran parte del juego, el jugador tiene que ocultarse y evitar encuentros hostiles con los enemigos ya que estos pueden matar a Amicia instantáneamente. Principalmente, Amicia se tiene que enfrentar a soldados de la Inquisición francesa,
-                  pero también soldados ingleses y aldeanos de la región. Amicia está equipada con una honda, con la que puede lanzar piedras para romper cadenas, crear distracciones o aturdir a los enemigos el tiempo suficiente para que hordas de ratas les ataquen. También es posible matar a los enemigos si Amicia lanza una piedra en la cabeza, si esta está desprotegida. </p>
+                  pero también soldados ingleses y aldeanos de la región. Amicia está equipada con una honda, con la que puede lanzar piedras para romper cadenas, crear distracciones o aturdir a los enemigos el tiempo suficiente para que hordas de ratas les ataquen. También es posible matar a los enemigos si Amicia lanza una piedra en la cabeza, si esta está desprotegida. </h5>
               </th>
           </tr>
           </table>
@@ -88,10 +88,10 @@
             <br>
             <div class="row">
               <div class="col-md-4 col-sm-12">
-                  <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br><br>
+                  <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br>
                      XBOX ONE<br>
                      XBOX SERIES </H3><br>
-                  <br>
+                  
                   <h2 clasS="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Trailer</h2><br>
                   <p style="margin-left: 26%;"><a href="https://www.youtube.com/watch?v=gjIb9dQgUF0" target="_blank" ><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a></p>
               </div>
