--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/DESTINY.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/DESTINY.html
@@ -65,23 +65,24 @@
   
           <div class="row">
              <div class="col-md-4 col-sm-12">
-              <img class="img" src="../img/XBOX/DESTINY.jpg" alt="sin imagen"><H2 class=" letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">DESTINY</H2>
+              <img class="img" src="../img/XBOX/DESTINY.jpg" alt="sin imagen"><H2 class="centrar letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">DESTINY</H2>
              </div>
              <div class="col-md-8 col-sm-12" >
             <table class="table-responsive" >
               <tr>
                 <th>
-                  <h2 class="centrar letraVJ">Descripcion</h2>
+                  <h4 class="centrar letraVJ">Descripción</h4>
                 </th>
               </tr>
               <br>
               <tr>
                 <th>
-                  <p class="centrar letraVJ">Destiny es un videojuego de disparos en primera persona, en forma de multijugador masivo en línea en un mundo abierto de ficción especulativa.
+                  <h5 class="centrar letraVJ">Destiny es un videojuego de disparos en primera persona, en forma de multijugador masivo en línea en un mundo abierto de ficción especulativa.
                     Fue desarrollado por Bungie y publicado por Activision como parte de un contrato de producción de diez años. Se lanzó a nivel mundial el 9 de septiembre de 2014. 
                     Según las empresas desarrolladoras, los costos de desarrollo y marketing superaron los 500 millones de dólares, pero no precisaron las cifras definitivas,
-                    aunque algunos periódicos precisaron que sólo la gran campaña de publicidad desplegada habría supuesto unos gastos de 200 millones de dólares.​ Un día después de su lanzamiento, 
-                    la empresa Activision declaró que Destiny se había convertido en el lanzamiento más exitoso de la historia de la franquicia, con unas ventas sólo en el primer día que superaban los 500 millones de dólares. </p>
+                    aunque algunos periódicos precisaron que sólo la gran campaña de publicidad desplegada habría supuesto unos gastos de 200 millones de dólares. Un día después de su lanzamiento, 
+                    la empresa Activision declaró que Destiny se había convertido en el lanzamiento más exitoso de la historia de la franquicia, con unas ventas sólo en el primer 
+                    día que superaban los 500 millones de dólares. </h5>
                 </th>
             </tr>
             </table>
@@ -90,11 +91,11 @@
               <br>
               <div class="row">
                 <div class="col-md-4 col-sm-12">
-                    <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br><BR>
+                    <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br>
                        XBOX ONE<br>
                        XBOX SERIES<br>
                        XBOX 360 </H3><br>
-                    <br>
+                    
                     <h2 clasS="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Trailer</h2><br>
                     <p style="margin-left: 26%;"><a href="https://www.youtube.com/watch?v=TDusDNo7zfM" target="_blank" ><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a></p>
                 </div>
