--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/FORZA MOTORSPORT 5.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/FORZA MOTORSPORT 5.html
@@ -64,21 +64,22 @@
   
           <div class="row">
              <div class="col-md-4 col-sm-12">
-              <img class="img" src="../img/XBOX/forza motorsport.jpeg" alt="sin imagen"><H2 class=" letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">FORZA MOTORSPORT 5</H2>
+              <img class="img" src="../img/XBOX/forza motorsport.jpeg" alt="sin imagen"><H2 class="centrar letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">FORZA MOTORSPORT 5</H2>
              </div>
              <div class="col-md-8 col-sm-12" >
             <table class="table-responsive" >
               <tr>
                 <th>
-                  <h2 class="centrar letraVJ">Descripcion</h2>
+                  <h4 class="centrar letraVJ">Descripción</h4>
                 </th>
               </tr>
               <br>
               <tr>
                 <th>
-                  <p class="centrar letraVJ">Forza Motorsport 5 es un salto natural de la saga a la nueva generación, tal y como fue la segunda parte, aparecida en 2007 en Xbox 360. Aprovecha la potencia de Xbox One para mostrarnos unos coches mejor modelados y más espectaculares que nunca,
+                  <h5 class="centrar letraVJ">Forza Motorsport 5 es un salto natural de la saga a la nueva generación, tal y como fue la segunda parte, aparecida en 2007 en Xbox 360. Aprovecha la potencia de Xbox One para mostrarnos unos coches mejor modelados y más espectaculares que nunca,
                     tanto por dentro como por fuera, y unos escenarios llenos de detalles, además de unos efectos visuales más vistosos. En este sentido, Forza Motorsport es el juego más llamativo de la nueva consola. No tiene esa épica y espectacularidad de Ryse, pero sí un acabado impecable,
-                     con un motor gráfico que se mueve a la perfección, resolución 1080p y 60 fotogramas por segundo para transmitir una gran sensación de velocidad cuando juguemos con la vista en primera persona.</p>
+                     con un motor gráfico que se mueve a la perfección, resolución 1080p y 60 fotogramas por segundo para transmitir una gran sensación de velocidad cuando juguemos
+                      con la vista en primera persona.</h5>
                 </th>
             </tr>
             </table>
@@ -87,11 +88,11 @@
               <br>
               <div class="row">
                 <div class="col-md-4 col-sm-12">
-                    <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br><BR>
+                    <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br>
                        XBOX ONE<br>
                        XBOX SERIES<br>
                         </H3><br>
-                    <br>
+                    
                     <h2 clasS="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Trailer</h2><br>
                     <p style="margin-left: 26%;"><a href="https://www.youtube.com/watch?v=YLcjfALaQh0" target="_blank" ><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a></p>
                 </div>
