--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/HADES.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/HADES.html
@@ -65,23 +65,23 @@
   
           <div class="row">
              <div class="col-md-4 col-sm-12">
-              <img class="img" src="../img/XBOX/HADES.jpeg" alt="sin imagen"><H2 class=" letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">HADES</H2>
+              <img class="img" src="../img/XBOX/HADES.jpeg" alt="sin imagen"><H2 class="centrar letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">HADES</H2>
              </div>
              <div class="col-md-8 col-sm-12" >
             <table class="table-responsive" >
               <tr>
                 <th>
-                  <h2 class="centrar letraVJ">Descripcion</h2>
+                  <h4 class="centrar letraVJ">Descripción</h4>
                 </th>
               </tr>
               <br>
               <tr>
                 <th>
-                  <p class="centrar letraVJ">Hades es un juego de rol de acción roguelike desarrollado y publicado por Supergiant Games. El juego fue lanzado para Microsoft Windows, 
+                  <h5 class="centrar letraVJ">Hades es un juego de rol de acción roguelike desarrollado y publicado por Supergiant Games. El juego fue lanzado para Microsoft Windows, 
                     Xbox One y Series X el 17 de septiembre de 2020, que siguió a un lanzamiento de acceso anticipado en diciembre de 2018. Los jugadores controlan a Zagreus,
                      el hijo de Hades, mientras intenta escapar del Inframundo para llegar al Monte Olimpo, en ocasiones con la ayuda de los obsequios que le otorgan los otros olímpicos. 
                      Cada carrera desafía al jugador a través de una serie aleatoria de habitaciones pobladas de enemigos y recompensas, y el jugador usa una combinación de su ataque de arma principal,
-                      poder de carrera y habilidad mágica para derrotarlos mientras evita el daño para progresar lo más lejos posible. Si bien Zagreus a menudo morirá, el jugador puede usar el tesoro ganado para mejorar ciertos atributos o desbloquear nuevas armas y habilidades para mejorar las posibilidades de escapar en carreras posteriores.</p>
+                      poder de carrera y habilidad mágica para derrotarlos mientras evita el daño para progresar lo más lejos posible. Si bien Zagreus a menudo morirá, el jugador puede usar el tesoro ganado para mejorar ciertos atributos o desbloquear nuevas armas y habilidades para mejorar las posibilidades de escapar en carreras posteriores.</h5>
                 </th>
             </tr>
             </table>
@@ -90,12 +90,12 @@
               <br>
               <div class="row">
                 <div class="col-md-4 col-sm-12">
-                    <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br><BR>
+                    <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br>
                        XBOX ONE<br>
                        XBOX SERIES<br>
                        
                         </H3><br>
-                    <br>
+                    
                     <h2 clasS="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Trailer</h2><br>
                     <p style="margin-left: 26%;"><a href="https://www.youtube.com/watch?v=91t0ha9x0AE" target="_blank" ><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a></p>
                 </div>
