--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/HALO INFINITE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/HALO INFINITE.html
@@ -65,23 +65,23 @@
   
           <div class="row">
              <div class="col-md-4 col-sm-12">
-              <img class="img" src="../img/XBOX/HALO INFINITE.jpg" alt="sin imagen"><H2 class=" letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">HALO INFINITE</H2>
+              <img class="img" src="../img/XBOX/HALO INFINITE.jpg" alt="sin imagen"><H2 class="centrar letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">HALO INFINITE</H2>
              </div>
              <div class="col-md-8 col-sm-12" >
             <table class="table-responsive" >
               <tr>
                 <th>
-                  <h2 class="centrar letraVJ">Descripcion</h2>
+                  <h4 class="centrar letraVJ">Descripción</h4>
                 </th>
               </tr>
               <br>
               <tr>
                 <th>
-                  <p class="centrar letraVJ">Halo Infinite es un videojuego de disparos en primera persona siendo la secuela de Halo 5: Guardians y Halo Wars 2.
+                  <h5 class="centrar letraVJ">Halo Infinite es un videojuego de disparos en primera persona siendo la secuela de Halo 5: Guardians y Halo Wars 2.
                     Así como un reinicio espiritual de la saga. Fue revelado en la E3 de 2018 y originalmente sería lanzado al mercado junto con la Xbox Series X a finales de 2020 estando disponible también para Xbox One y Windows 10.
                      Sin embargo, en Agosto de 2020 343 Industries anunció que el juego sería retrasado, siendo el 8 de Diciembre de 2021 la fecha de lanzamiento. 
                      Ha pasado 1 año y 2 meses después de los acontecimientos de Halo 5: Guardians. La UNSC Infinity fue invadida y atacada por fuerzas de los Desterrados cerca de la Instalación 07 (Zeta Halo) con el Jefe Maestro despejando una zona de evacuación para ser atacado y derrotado por Atriox, 
-                     líder de los Desterrados, dejando al Jefe a la deriva en el espacio mientras que Fernando Esparza escapa en un Pelican.</p>
+                     líder de los Desterrados, dejando al Jefe a la deriva en el espacio mientras que Fernando Esparza escapa en un Pelican.</h5>
                 </th>
             </tr>
             </table>
@@ -90,12 +90,12 @@
               <br>
               <div class="row">
                 <div class="col-md-4 col-sm-12">
-                    <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br><BR>
+                    <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br>
                        XBOX ONE<br>
                        XBOX SERIES<br>
                        
                         </H3><br>
-                    <br>
+                    
                     <h2 clasS="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Trailer</h2><br>
                     <p style="margin-left: 26%;"><a href="https://www.youtube.com/watch?v=rFh2i4AlPD4" target="_blank" ><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a></p>
                 </div>
