--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/LEFT 4 DEAD.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/LEFT 4 DEAD.html
@@ -65,21 +65,21 @@
   
           <div class="row">
              <div class="col-md-4 col-sm-12">
-              <img class="img" src="../img/XBOX/LEFT 4 DEAD.jfif" alt="sin imagen"><H2 class=" letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">LEFT 4 DEAD 2</H2>
+              <img class="img" src="../img/XBOX/LEFT 4 DEAD.jfif" alt="sin imagen"><H2 class="centrar letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">LEFT 4 DEAD 2</H2>
              </div>
              <div class="col-md-8 col-sm-12" >
             <table class="table-responsive" >
               <tr>
                 <th>
-                  <h2 class="centrar letraVJ">Descripcion</h2>
+                  <h4 class="centrar letraVJ">Descripción</h4>
                 </th>
               </tr>
               <br>
               <tr>
                 <th>
-                  <p class="centrar letraVJ">Left 4 Dead 2 es un videojuego de disparos en primera persona de tipo acción creado por la compañía Valve. Corresponde a la secuela de Left 4 Dead y se lanzó al mercado el 17 de noviembre de 2009 en Estados Unidos y Latinoamérica.
+                  <h5 class="centrar letraVJ">Left 4 Dead 2 es un videojuego de disparos en primera persona de tipo acción creado por la compañía Valve. Corresponde a la secuela de Left 4 Dead y se lanzó al mercado el 17 de noviembre de 2009 en Estados Unidos y Latinoamérica.
                     En Europa llegó tres días después, el 20 de noviembre. El 14 de diciembre de 2009 fue anunciado el primer contenido descargable para esta secuela: una nueva campaña llamada "Defunción", que se desarrolla entre las dos primeras campañas del juego. Aquí se reúnen los protagonistas del primer Left 4 Dead (Francis, Louis y Zoey) con los supervivientes de esta secuela.
-                     Bill no aparece con vida, ya que se sacrificó para que los demás siguieran a salvo. Salió a la luz el 22 de abril de 2010. El juego cuenta con los cuatro modos de su predecesor: el Un jugador (en el que se juega un solo jugador), el Campaña (en el que se juega en línea con otros jugadores), el Enfrentamiento (podemos jugar como infectados) y el Supervivencia (en el que hay que sobrevivir el mayor tiempo posible).</p>
+                     Bill no aparece con vida, ya que se sacrificó para que los demás siguieran a salvo. Salió a la luz el 22 de abril de 2010. El juego cuenta con los cuatro modos de su predecesor: el Un jugador (en el que se juega un solo jugador), el Campaña (en el que se juega en línea con otros jugadores), el Enfrentamiento (podemos jugar como infectados) y el Supervivencia (en el que hay que sobrevivir el mayor tiempo posible).</h5>
                 </th>
             </tr>
             </table>
@@ -88,13 +88,13 @@
               <br>
               <div class="row">
                 <div class="col-md-4 col-sm-12">
-                    <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br><BR>
+                    <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br>
                        XBOX ONE<br>
                        XBOX SERIES<br>
                        XBOX 360
                        
                         </H3><br>
-                    <br>
+                    
                     <h2 clasS="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Trailer</h2><br>
                     <p style="margin-left: 26%;"><a href="https://www.youtube.com/watch?v=OqUUfwSN-MY" target="_blank" ><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a></p>
                 </div>
