--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/MORTAL KOMBAT 11.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/MORTAL KOMBAT 11.html
@@ -65,24 +65,24 @@
   
           <div class="row">
              <div class="col-md-4 col-sm-12">
-              <img class="img" src="../img/XBOX/MORTAL KOMBAL 11.jpeg" alt="sin imagen"><H2 class=" letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">MORTAL KOMBAT 11</H2>
+              <img class="img" src="../img/XBOX/MORTAL KOMBAL 11.jpeg" alt="sin imagen"><H2 class="centrar letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">MORTAL KOMBAT 11</H2>
              </div>
              <div class="col-md-8 col-sm-12" >
             <table class="table-responsive" >
               <tr>
                 <th>
-                  <h2 class="centrar letraVJ">Descripcion</h2>
+                  <h4 class="centrar letraVJ">Descripción</h4>
                 </th>
               </tr>
               <br>
               <tr>
                 <th>
-                  <p class="centrar letraVJ">Mortal Kombat 11 es la nueva entrega de la violenta y salvaje saga de lucha de NetherRealm Studios para consolas y PC.
+                  <h5 class="centrar letraVJ">Mortal Kombat 11 es la nueva entrega de la violenta y salvaje saga de lucha de NetherRealm Studios para consolas y PC.
                     Se trata de la undécima secuela de una serie de títulos de combate y peleas de marcada estructura 2D, que en esta ocasión, 
                     además de añadir los mejores gráficos de la serie y el gore más descarnado en los llamados Fatality, presentará luchadores clásicos y nuevos,
                      más modos de juego y una oferta online que quiere marcar un antes y un después en los eSports. Tras la derrota de Shinnok, 
                      Raiden se ve forzado a absorber toda la corrupción y maldad lanzadas por el Dios caído que infectaron la esencia de la cámara Jinsei para poder restaurarla, 
-                     provocando su transformación en su versión corrompida, volviéndose completamente despiadado, asegurándose de eliminar a cualquiera que considere una amenaza contra el reino de la Tierra antes de que actúe siendo capaz incluso de utilizar el amuleto de Shinnok para aumentar su poder.</p>
+                     provocando su transformación en su versión corrompida, volviéndose completamente despiadado, asegurándose de eliminar a cualquiera que considere una amenaza contra el reino de la Tierra antes de que actúe siendo capaz incluso de utilizar el amuleto de Shinnok para aumentar su poder.</h5>
                 </th>
             </tr>
             </table>
@@ -91,12 +91,12 @@
               <br>
               <div class="row">
                 <div class="col-md-4 col-sm-12">
-                    <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br><BR>
+                    <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br>
                        XBOX ONE<br>
                        XBOX SERIES<br>                    
                        
                         </H3><br>
-                    <br>
+                    
                     <h2 clasS="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Trailer</h2><br>
                     <p style="margin-left: 26%;"><a href="https://www.youtube.com/watch?v=7zwQPJmg-Kg" target="_blank" ><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a></p>
                 </div>
