--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/PAYDAY 2.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/PAYDAY 2.html
@@ -66,22 +66,22 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/XBOX/PAYDAY 2.jpeg" alt="sin imagen"><H2 class=" letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">PAYDAY 2</H2>
+            <img class="img" src="../img/XBOX/PAYDAY 2.jpeg" alt="sin imagen"><H2 class="centrar letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">PAYDAY 2</H2>
            </div>
            <div class="col-md-8 col-sm-12" >
           <table class="table-responsive" >
             <tr>
               <th>
-                <h2 class="centrar letraVJ">Descripcion</h2>
+                <h4 class="centrar letraVJ">Descripción</h4>
               </th>
             </tr>
             <br>
             <tr>
               <th>
-                <p class="centrar letraVJ">PAYDAY 2 es un juego de disparos cooperativo de primera persona con elementos RPG. Hasta 4 jugadores pueden cooperar en un atraco. El juego base tiene 12 atracos,
+                <h5 class="centrar letraVJ">PAYDAY 2 es un juego de disparos cooperativo de primera persona con elementos RPG. Hasta 4 jugadores pueden cooperar en un atraco. El juego base tiene 12 atracos,
                   varios los cuales tienen lugar en múltiples días y lugares. Overkill lanzaría nuevos atracos gratuitos o en DLCs de paga, aumentando el número de sitios de atracos únicos a más de 30.
                   Similar al PAYDAY original, los atracos tienen varios eventos dinámicos. Por ejemplo, los guardias pueden tener distintas rutas de patrullaje, las cajas fuertes pueden estar en diferentes sitios y la cantidad de dinero y botín puede ser diferente.
-                   Algunos atracos, como el Bank Heist, tienen diferentes variantes dependiendo del objetivo (por ejemplo, dinero, oro, cajas de depósito, etc.)</p>
+                   Algunos atracos, como el Bank Heist, tienen diferentes variantes dependiendo del objetivo (por ejemplo, dinero, oro, cajas de depósito, etc.)</h5>
               </th>
           </tr>
           </table>
@@ -90,13 +90,13 @@
             <br>
             <div class="row">
               <div class="col-md-4 col-sm-12">
-                  <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br><BR>
+                  <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br>
                      XBOX ONE<br>
                      XBOX SERIES<br> 
                      XBOX 360                   
                      
                       </H3><br>
-                  <br>
+                  
                   <h2 clasS="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Trailer</h2><br>
                   <p style="margin-left: 26%;"><a href="https://www.youtube.com/watch?v=Z2tmHMIA1sU" target="_blank" ><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a></p>
               </div>
