--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/PROTOTYPE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/PROTOTYPE.html
@@ -66,21 +66,21 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/XBOX/PROTOTYPE.jpeg" alt="sin imagen"><H2 class=" letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">PROTOTYPE</H2>
+            <img class="img" src="../img/XBOX/PROTOTYPE.jpeg" alt="sin imagen"><H2 class="centrar letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">PROTOTYPE</H2>
            </div>
            <div class="col-md-8 col-sm-12" >
           <table class="table-responsive" >
             <tr>
               <th>
-                <h2 class="centrar letraVJ">Descripcion</h2>
+                <h4 class="centrar letraVJ">Descripción</h4>
               </th>
             </tr>
             <br>
             <tr>
               <th>
-                <p class="centrar letraVJ">El juego se desarrolla en New York City. Se narran los hechos de como un virus infecta a las personas y los intentos militares para poner fin a la misma. El protagonista de la historia se llama Alex Mercer, 
+                <h5 class="centrar letraVJ">El juego se desarrolla en New York City. Se narran los hechos de como un virus infecta a las personas y los intentos militares para poner fin a la misma. El protagonista de la historia se llama Alex Mercer, 
                   que ha enemiga de absorción de cambiar de forma y habilidades. Él puede conservar los recuerdos, las experiencias, la biomasa y las formas físicas de los enemigos que se consumen. 
-                  Alex también puede cambiar la forma de partes de su cuerpo en formas más especializadas de las armas de ataque o defensa. Todo esto en conjunto tienen el propósito de dar a los jugadores múltiples maneras de completar sus objetivos.</p>
+                  Alex también puede cambiar la forma de partes de su cuerpo en formas más especializadas de las armas de ataque o defensa. Todo esto en conjunto tienen el propósito de dar a los jugadores múltiples maneras de completar sus objetivos.</h5>
               </th>
           </tr>
           </table>
@@ -89,13 +89,13 @@
             <br>
             <div class="row">
               <div class="col-md-4 col-sm-12">
-                  <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br><BR>
+                  <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br>
                      XBOX ONE<br>
                      XBOX SERIES<br> 
                      XBOX 360                   
                      
                       </H3><br>
-                  <br>
+                  
                   <h2 clasS="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Trailer</h2><br>
                   <p style="margin-left: 26%;"><a href="https://www.youtube.com/watch?v=HxyM_GxFwJ0" target="_blank" ><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a></p>
               </div>
