--- a/PROYECTO SEMESTRAL/Exclusivo PC/ESCAPE FROM TARKOV.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/ESCAPE FROM TARKOV.html
@@ -67,7 +67,7 @@
              <div class="col-md-4 col-sm-12">
               <img class="img" src="../img/PC/Escape from Tarkov.jpg" alt="sin imagen"><h3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%;">ESCAPE FROM TARKOV</h3>
              </div>
-             <div class="col-md-8 col-sm-12" >
+             <div class="col-md-8 col-sm-12" style="margin-top: 8%;">
               <table class="table-responsive" >
                 <tr><th class="centrar , letraVJ" ><h4>Descripción</h4>
                 </th></tr>
