--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/NO MANS SKY.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/NO MANS SKY.html
@@ -65,22 +65,22 @@
   
           <div class="row">
              <div class="col-md-4 col-sm-12">
-              <img class="img" src="../img/XBOX/NO MANS SKY.jpeg" alt="sin imagen"><H2 class=" letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">NO MANS SKY</H2>
+              <img class="img" src="../img/XBOX/NO MANS SKY.jpeg" alt="sin imagen"><H2 class="centrar letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">NO MANS SKY</H2>
              </div>
              <div class="col-md-8 col-sm-12" >
             <table class="table-responsive" >
               <tr>
                 <th>
-                  <h2 class="centrar letraVJ">Descripcion</h2>
+                  <h4 class="centrar letraVJ">Descripcion</h4>
                 </th>
               </tr>
               <br>
               <tr>
                 <th>
-                  <p class="centrar letraVJ">No Man's Sky, anteriormente denominado Project Skyscraper,[1] es un juego de ciencia ficción procedural desarrollado por el desarrollador inglés Hello Games de Guildford, 
+                  <h5 class="centrar letraVJ">No Man's Sky, anteriormente denominado Project Skyscraper,[1] es un juego de ciencia ficción procedural desarrollado por el desarrollador inglés Hello Games de Guildford, 
                     Reino Unido. Hello Games es mejor conocido por su serie Joe Danger, y trajo su estilo de desarrollo único a No Man's Sky. El juego presenta exploración planetaria, océanos profundos,
                      batallas espaciales, depredadores y presas, y mucho más en varios mundos generados por generación procedural. Cada mundo tiene sus propios ecosistemas, recompensas y peligros, 
-                     lo que lleva al jugador a través de los cuatro pilares centrales del juego: Explorar, Luchar, Comerciar y Sobrevivir.</p>
+                     lo que lleva al jugador a través de los cuatro pilares centrales del juego: Explorar, Luchar, Comerciar y Sobrevivir.</h5>
                 </th>
             </tr>
             </table>
@@ -89,12 +89,12 @@
               <br>
               <div class="row">
                 <div class="col-md-4 col-sm-12">
-                    <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br><BR>
+                    <H3 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Plataformas:<br>
                        XBOX ONE<br>
                        XBOX SERIES<br>                    
                        
                         </H3><br>
-                    <br>
+                    
                     <h2 clasS="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 30%;">Trailer</h2><br>
                     <p style="margin-left: 26%;"><a href="https://www.youtube.com/watch?v=ifZA6IMeLs8" target="_blank" ><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a></p>
                 </div>
